# umba-template

./: .gitignore  .gitmodules  .md-pp.options  .set_msvc.bat  .set_msvc.bat.template  .set_sln.bat  .set_sln_exes.bat  CMakeLists.txt  README.md  README.md_  _check_tabs.bat  _fix_tabs.bat  _gen-doc.bat  _precommit.bat  _start_msvc.bat  _start_msvcXXXX.bat.template  _update_all.bat  _update_debug_conf.bat  deploy_local.bat  gen-doc-wlog.bat  gen-doc.bat  setup_msvc.bat.example  umba-brief-scanner.rsp  umba-cl-msg.bat
.PVS-Studio/: .gitignore  local.pvsconfig.template  pvsconfig_file.pvsconfig.template
.templates/: readme.txt
_libs/: .gitignore  _clone_libs.bat  _git-job-impl.bat  libs.list  push_libs.bat  update_libs.bat
_src/umba-template/: AppConfig.h  ArgParser.h  app_ver_config.h  log.h  umba-template.cpp
doc/: _sources_brief.md  _sources_brief.md_  Исходные тексты.md_  Списки замечаний в исходном коде.md_
doc.notes/: README.md  README.md_
doc.notes/.scratches/: rename_submodules.txt  scratches.txt
tests/: .find_test_exe.bat  .gitignore  .set_config.bat  .set_config.bat.template  _set_config.bat  _setup_tests.bat  _test_template.bat  test.bat  test_template.bat
